--- a/二叉树/104.二叉树的最大深度.md
+++ b/二叉树/104.二叉树的最大深度.md
@@ -2,27 +2,18 @@
 
 **问题分析**
 
-深度就是根节点到叶子节点经历的节点数，包括首尾。
+给定一颗二叉树，计算出二叉树的最大深度
 
-最大深度就是求长的经过的节点数。
+有两种方法，自上向下的计算深度，自下向上的深度
 
-递归有两种做法，层序遍历也可以做。
+自上向下，将当前层数 cnt 作为参数传入到递归函数里，如果检测到当前节点不为 nil，cnt ++，并且 res = max( res , cnt)，不需要返回值，当 root  == nil 时退出
 
-可以让当前层的最大深度等于左右子节点的最大深度中更大的一个加 1。递归处理，直到当前节点为 nil，返回零。
-
-还可以让每次最大深度跟随递归次数，将当前深度传入左右子节点的函数中，如果判断节点不为 nil 深度就加一，并且判断当前深度和全局变量 res 中更大的一个作为 res。
+自下向上，递归函数带返回值，如果 root == nil ，return 0， 分别计算出 left 子节点 和 right 子节点 的最大深度，该节点的最大深度为 max( left , right ) + 1 , 层层返回
 
 **代码实现**
 
 ```go
- func maxDepth(root *TreeNode) int {
- 	if root == nil {
- 		return 0
- 	}
- 	depth := max(maxDepth(root.Left), maxDepth(root.Right)) + 1
- 	return depth
- }
-
+// 自上向下
 func maxDepth(root *TreeNode) int {
 	res := 0
 	var depth func(root *TreeNode, cnt int)
@@ -37,6 +28,16 @@ func maxDepth(root *TreeNode) int {
 	}
 	depth(root, 0)
 	return res
+}
+
+
+// 自下向上
+func maxDepth(root *TreeNode) int {
+	if root == nil {
+		return 0
+	}
+	depth := max(maxDepth(root.Left), maxDepth(root.Right)) + 1
+	return depth
 }
 ```
 
