--- a/二叉树/226.翻转二叉树.md
+++ b/二叉树/226.翻转二叉树.md
@@ -2,23 +2,21 @@
 
 **问题分析**
 
-将二叉树进行翻转，如 1 2 3 4 5 6 7 变成 1 3 2  7 6 5 4。
+将一颗二叉树翻转
 
-实际上就是将每个节点的左右节点进行调换，
-
-使用递归对所有节点进行遍历和调换处理
+实际上就是将每个二叉树的节点进行翻转
 
 **代码实现**
 
 ```go
 func invertTree(root *TreeNode) *TreeNode {
-    if root == nil{
-        return root
-    }
-    root.Left,root.Right = root.Right,root.Left
-    invertTree(root.Left)
-    invertTree(root.Right)
-    return root
+	if root == nil {
+		return root
+	}
+	root.Left, root.Right = root.Right, root.Left
+	invertTree(root.Right)
+	invertTree(root.Left)
+	return root
 }
 ```
 
