--- a/二叉树/437.路径总和 III.md
+++ b/二叉树/437.路径总和 III.md
@@ -10,6 +10,8 @@
 
 然后使用 res += record[ sum - targetSum ]， record[ sum - targetSum ] 就是和为 targetSum 的路径的数量
 
+sum 表示的是当前节点的前缀和（包括当前节点）， 从根节点到某个节点 a 的前缀和是 sum - targetSum ，所以，从 a 节点到 当前节点的中间路径的节点值和就是 target
+
 递归的 dfs 在某一时刻只有一条路径在被检索，不会出现两条路径同时更新全局变量 record 对彼此造成影响
 
 但是，为了消除上一条路径对下一条路径的影响，需要回溯，将某个节点的左右节点都计算结束后，也就是这个节点已经完成了，将这个节点的 sum 从 record 中去除，防止对后续的路径造成影响。
