--- a/栈/单调栈/42.接雨水.md
+++ b/栈/单调栈/42.接雨水.md
@@ -13,6 +13,7 @@
 **代码实现**
 
 ```go
+// 双向指针法，比较简单易于理解
 func trap(height []int) int {
 	n := len(height)
 	preHeight := make([]int, n)
@@ -33,7 +34,33 @@ func trap(height []int) int {
 	}
 	return area
 }
+
 ```
 
-
+```go
+// 单调栈，和 84 题一起看
+func trap(height []int) int {
+	res := 0
+	record := make([]int, 0)
+	for index, value := range height {
+        // 维护一个递减的栈
+        // 如果即将进入的栈的元素比栈头更大，就计算出坑的大小，并将栈头弹出
+        // 栈中储存的是 index，方便计算宽度
+		for len(record) > 0 && value > height[record[len(record)-1]] {
+			thisHeight := height[record[len(record)-1]]
+			record = record[:len(record)-1]
+			if len(record) == 0 {
+				break
+			}
+			left := record[len(record)-1]
+			leftHeight := height[record[len(record)-1]]
+			h := min(leftHeight, value) - thisHeight
+			res += h * (index - left - 1)
+		}
+		// 如果栈的长度为 0 或者是新遍历到的值小于栈头元素
+		record = append(record, index)
+	}
+	return res
+}
+```
 
