--- a/栈/单调栈/496.下一个更大元素 I.md
+++ b/栈/单调栈/496.下一个更大元素 I.md
@@ -1,7 +1,9 @@
 ### 496.下一个更大元素 I
 **问题分析 **
 nums2 数组包含 nums1 数组中所有元素，nums1 数组每个元素不重复，返回一个长度和 nums1 数组相同的数组 res
+
 res[i] 表示 nums1[i] 对应的元素在 nums2 中出现的位置的右边的第一个大于 nums1[i] 的元素
+
 实际上使用一个 map 对 nums2 中出现的元素的 value 作为 key，index 作为 value 进行储存，然后再对 nums1 进行遍历，用获取的元素对 map 进行取值。可以获得到 nums1 中元素出现在 nums2 中的下标 index，然后对右边进行循环比对
 
 **代码实现**
@@ -16,6 +18,8 @@ func nextGreaterElement(nums1 []int, nums2 []int) []int {
 
 	for i := 0; i < len(nums1); i++ {
 		index := record[nums1[i]]
+		//使用 flag 来标记此位是否已经被修改
+		//如果修改就跳过，未修改就添加 -1 
 		flag := true
 
 		for j := index + 1; j < len(nums2); j++ {
