--- a/回溯/78.子集.md
+++ b/回溯/78.子集.md
@@ -31,6 +31,7 @@ func subsets(nums []int) [][]int {
 		path = append(path, nums[i])
 		dfs(i + 1)
         //当上述逻辑执行结束，就需要退出本层，就需要将本层的数据去除
+        //因为上一层有两个不同选择，每个选择下面都需要走一遍这一层，所以需要退出这一层
 		path = path[:len(path)-1]
 	}
 	dfs(0)
