--- a/字符串/541.翻转字符串.md
+++ b/字符串/541.翻转字符串.md
@@ -32,16 +32,17 @@ func reverseStr(s string, k int) string {
 	ss := []byte(s)
 	length := len(ss)
 	for i := 0; i < length; i += 2 * k {
+		// 每次旋转 k 个，旋转的是 0 到 k-1
 		if i+k < length {
-			Reverse(ss[i : i+k])
+			// 所以右边只需要取到 i+k,不包括 i+k 这一个
+			reverse(ss[i : i+k])
 		} else {
-			Reverse(ss[i:length])
+			reverse(ss[i:length])
 		}
 	}
 	return string(ss)
 }
-
-func Reverse(s []byte) {
+func reverse(s []byte) {
 	left, right := 0, len(s)-1
 	for left < right {
 		s[right], s[left] = s[left], s[right]
